fix(twitch): unreadable leaderboard username highlight

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -690,6 +690,11 @@
       color: @text;
     }
 
+    /* Leaderboard highlighted username */
+    .bits-leaderboard-expanded-top-three-entry__marquee-username .gRUYWI {
+      color: @base !important;
+    }
+
     /* Privacy center */
 
     .evszEp {
